--- a/style/newTaskWindow/components/_time-input.scss
+++ b/style/newTaskWindow/components/_time-input.scss
@@ -6,8 +6,8 @@
 }
 
 @mixin increment-button {
-    width: 3rem;
-    height: 3rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 0.5rem;
     padding-bottom: 0.25rem;
     color: $dark-blue-1;
@@ -18,7 +18,7 @@
 
 
 .time-input {
-    width: 20%;
+    width: 30%;
     height: 100%;
     display: flex;
 
@@ -27,10 +27,10 @@
         width: 50%;
 
         & .__hours-bar {
-            width: 5rem;
-            height: 2.5rem;;
+            width: 2.5rem;
+            height: 2.25rem;
             background: linear-gradient( 135deg, $light-purple-1, $light-blue-1);
-            border-radius: 3rem;
+            border-radius: 1rem;
             transition: all 0.15s;
         }
     }
@@ -40,17 +40,17 @@
         width: 50%;
 
         & .__minutes-bar {
-            width: 5rem;
-            height: 2.5rem;
+            width: 2.5rem;
+            height: 2.25rem;
             background: linear-gradient( -135deg, $light-purple-1, $light-blue-1);
-            border-radius: 3rem;
+            border-radius: 1rem;
             transition: all 0.15s;
         }
     }
 
     & .__label {
         font-size: 1.5em;
-        width: 2.5rem;
+        width: 1.5rem;
         color: $dark-grey-2;
         background-color: white;
         border: none;
@@ -74,4 +74,10 @@
     }
 
 
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
