added confirm button for time input and fixed some bugs.

--- a/style/newTaskWindow/components/_header.scss
+++ b/style/newTaskWindow/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
     background: linear-gradient(130deg, $medium-blue-1, $medium-blue-2);
 
-    & .__title {
+    & .__title-main {
       margin-left: 2em;
       border-left: 1px solid $lighter-blue-1;
       color: white;
