fixed an error with changing the new task window title.

--- a/style/newTaskWindow/components/_time-input.scss
+++ b/style/newTaskWindow/components/_time-input.scss
@@ -25,6 +25,7 @@
     & .__hours-input {
         height: 100%;
         width: 50%;
+        margin-top: -2rem;
 
         & .__hours-bar {
             width: 2.5rem;
@@ -38,6 +39,7 @@
     & .__minutes-input {
         height: 100%;
         width: 50%;
+        margin-top: -2rem;
 
         & .__minutes-bar {
             width: 2.5rem;
