--- a/style/newTaskWindow/components/_main-container.scss
+++ b/style/newTaskWindow/components/_main-container.scss
@@ -26,7 +26,7 @@
         border: 0.5px solid $dark-grey-2;
         padding: 0.2rem;
         width: calc(100% - 0.4rem);
-        font-size: 1.2em;
+        font-size: 1.65em;
         color: $dark-grey-2;
         font-family: 'Trebuchet MS', serif;
         margin-bottom: 1.5rem;
@@ -36,12 +36,13 @@
         text-justify: left;
         width: calc(100% - 1rem);
         padding: 0.5rem;
-        font-size: 1.2em;
+        font-size: 1.45em;
         color: $dark-grey-2;
         font-family: 'Trebuchet MS', serif;
         overflow: auto;
         border-radius: 0.5rem;
         margin-bottom: 1.5rem;
+        resize: none;
     }
 
     & .__time-btn {
@@ -56,8 +57,8 @@
 
     & .__confirm-btn {
         bottom: 0;
-        width: 20%;
-        height: 2.5rem;
+        width: 15%;
+        height: 2rem;
         background: linear-gradient(135deg, $light-blue-3, $medium-blue-1);
         border-top-left-radius: 0.5rem;
         border-top-right-radius: 0.5rem;
