added the schedule spans.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -29,6 +29,7 @@ $light-blue-2: #73B9FF;
 $light-blue-3: #8AB5FF;
 $light-blue-4: #6CA3FF;
 $light-blue-5: #ADDEFF;
+$light-blue-6: #C3D9FF;
 
 $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
@@ -48,3 +49,5 @@ $medium-red-1: #E15050;
 $light-red-1: #FF8080;
 
 $light-purple-1: #8E84EB;
+
+$light-pink-1: #FBC6FF;
