--- a/style/mainWindow/components/_navigation-bar.scss
+++ b/style/mainWindow/components/_navigation-bar.scss
@@ -60,6 +60,7 @@
     & .__label {
         font-family: 'Trebuchet MS', serif;
         color: $dark-grey-2;
+        margin-left: 0.25rem;
         font-size: 0.8rem;
         flex-basis: 80%;
     }
