made new-task option semi-fonctional : not added in json yet.

--- a/style/mainWindow/components/_schedule.scss
+++ b/style/mainWindow/components/_schedule.scss
@@ -30,6 +30,7 @@
             position: absolute;
             border-radius: 5rem;
             width: 80%;
+            cursor: pointer;
             background: linear-gradient(130deg, $light-blue-6, $light-pink-1);
             border: 0.5px solid $dark-grey-2;
             transition: all 0.2s;
