--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -543,6 +543,7 @@
   position: absolute;
   border-radius: 5rem;
   width: 80%;
+  cursor: pointer;
   background: linear-gradient(130deg, #C3D9FF, #FBC6FF);
   border: 0.5px solid #707070;
   -webkit-transition: all 0.2s;
