--- a/style/mainWindow/components/_task-card.scss
+++ b/style/mainWindow/components/_task-card.scss
@@ -13,13 +13,14 @@
         box-shadow: 5px 5px 6px rgba($light-blue-1, 0.7);
 
         & .__title {
-            height: 50%;
+            max-height: 50%;
+            padding-top: 1.5rem;
             padding-left: 5%;
             width: fit-content;
             max-width: 90%;
             overflow-x: auto;
             overflow-y: hidden;
-            font-size: 2.65em;
+            font-size: 2.35em;
             font-family: 'Trebuchet MS', serif;
             color: white;
 
@@ -83,7 +84,8 @@
     & .__main { 
 
         & .__title {
-            height: 100%;
+            max-height: 100%;
+            padding-top: 1rem;
         }
 
         & .__start-time {
