--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -414,7 +414,8 @@
 }
 
 .task-card .__main .__title {
-  height: 50%;
+  max-height: 50%;
+  padding-top: 1.5rem;
   padding-left: 5%;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -422,7 +423,7 @@
   max-width: 90%;
   overflow-x: auto;
   overflow-y: hidden;
-  font-size: 2.65em;
+  font-size: 2.35em;
   font-family: 'Trebuchet MS', serif;
   color: white;
 }
@@ -492,7 +493,8 @@
 }
 
 .small-task-card .__main .__title {
-  height: 100%;
+  max-height: 100%;
+  padding-top: 1rem;
 }
 
 .small-task-card .__main .__start-time {
@@ -668,12 +670,10 @@
 }
 
 .task-page .__info-box .__repeat {
-  color: #E15050;
   font-size: 1.45em;
 }
 
 .task-page .__info-box .__notification {
-  color: #65C954;
   font-size: 1.45em;
 }
 
