added check and fixed edit, remade structure for removing, adding, and editing tasks, added important-mark.

--- a/style/mainWindow/components/_schedule.scss
+++ b/style/mainWindow/components/_schedule.scss
@@ -4,8 +4,6 @@
     position: relative;
     border-top: none;
     
-    
-
     & .__hour-spans {
         height: 100%;
         width: 100%;
@@ -40,6 +38,11 @@
             }
 
         }
+
+        & .completed {
+            border: 1px solid $light-green-1;       
+        }
+     
 
     }
 
