--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,16 +1,6 @@
 
 
-$dark-grey-1: #282726;
-$dark-grey-2: #707070;
-$dark-grey-3: rgb(58, 56, 53);
-
-$medium-grey-1: #86817C;
-$medium-grey-2: #D9D9D9;
-$medium-grey-3: #B9B9B9;
-
-$light-grey-1: #D6CAB0;
-$light-grey-2: #EDF5E1;
-$light-grey-3: #F9F9F9;
+$dark-grey-1: #707070;
 
 $dark-blue-1: #717AFF;
 $dark-blue-2: #3400FF;
@@ -40,13 +30,11 @@ $lighter-blue-5: #E4EFFF;
 $turquoise-1: #A1FFFF;
 $turquoise-2: #D5FFFF;
 
-$medium-green-1: #65C954;
-
 $light-green-1: #C0FFB5;
-
-$medium-red-1: #E15050;
+// $light-green-1: aquamarine;
 
 $light-red-1: #FF8080;
+// $light-red-1: #F05ADF;
 
 $light-purple-1: #8E84EB;
 
