--- a/style/mainWindow/components/_schedule.scss
+++ b/style/mainWindow/components/_schedule.scss
@@ -26,7 +26,7 @@
 
         & .__task-span {
             position: absolute;
-            border-radius: 5rem;
+            border-radius: 2rem;
             width: 80%;
             cursor: pointer;
             background: linear-gradient(130deg, $light-blue-6, $light-pink-1);
@@ -34,7 +34,7 @@
             transition: all 0.2s;
 
             &:hover {
-                box-shadow: 0.1rem 0.2rem rgba(#B9B9B9, 0.1);
+                border: 0.5px solid #A9A9A9;
             }
 
         }
