--- a/style/mainWindow/components/_task-card.scss
+++ b/style/mainWindow/components/_task-card.scss
@@ -70,8 +70,7 @@
             bottom: 0.5rem;
             height: 0.5rem;
             width: 0.5rem;
-            background-color: $light-red-1;
-            opacity: 0.6;
+            background-color: rgba($light-red-1, 0.6);
         }
     }
 
