added importance input and link support with embed players for twitch and youtube.

--- a/style/newTaskWindow/components/_header.scss
+++ b/style/newTaskWindow/components/_header.scss
@@ -12,5 +12,10 @@
     & .__close-btn {
         color: $lighter-blue-4;
         right: 2rem;
+        transition: all 0.2s;
+
+        &:hover {
+          color: $light-red-1;
+        }
     }
 }
