--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -206,6 +206,7 @@
 
 .header {
   background: linear-gradient(130deg, #5B9CFF, #619AF0);
+  height: 14.3vh;
 }
 
 .header .__mainTitle {
@@ -244,6 +245,14 @@
 
 .header .__next-task ::-webkit-scrollbar {
   display: none;
+}
+
+.header .__quit-calendar-btn {
+  color: white;
+  font-size: 6em;
+  height: 100%;
+  right: 2rem;
+  top: 0.5rem;
 }
 
 .navigation-bar {
@@ -767,6 +776,136 @@
   -webkit-box-shadow: inset 0 0 10px 10px #ADDEFF;
           box-shadow: inset 0 0 10px 10px #ADDEFF;
   border: 0.35rem solid transparent;
+}
+
+.calendar {
+  display: none;
+  width: 100%;
+  top: 14.3%;
+  height: 85.7%;
+  background-color: white;
+}
+
+.calendar .__main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 90%;
+}
+
+.calendar .__main-container :not(:last-child) {
+  border-right: 0.5px solid #707070;
+}
+
+.calendar .__main-container .__day {
+  -ms-flex-preferred-size: 14.3%;
+      flex-basis: 14.3%;
+  text-align: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.calendar .__main-container .__day .__title {
+  border: none;
+  text-transform: uppercase;
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
+  letter-spacing: 0.7px;
+  font-weight: 400;
+  color: #5B9CFF;
+  font-size: 1.35em;
+}
+
+.calendar .__main-container .__day .__day-box {
+  position: relative;
+  font-family: 'Ebrima', serif;
+  border-radius: 0.2rem;
+  background-color: #FCFCFC;
+  border: 0.5px solid #707070;
+  color: #5B9CFF;
+  width: 10vmin;
+  height: 10vmin;
+  margin-top: 0.7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 2.5em;
+  cursor: pointer;
+}
+
+.calendar .__main-container .__day .__day-box .__curr-day-mark {
+  position: absolute;
+  left: 4px;
+  font-size: 0.5em;
+  border: none;
+}
+
+.calendar .__main-container .__day .__day-box .__curr-day-mark::after {
+  content: "➼";
+}
+
+.calendar .__main-container .__day .__day-box .__today-mark {
+  position: absolute;
+  top: 5px;
+  font-size: 0.3em;
+}
+
+.calendar .__main-container .__day .__day-box .__today-mark::after {
+  content: "TODAY";
+}
+
+.calendar .__footer {
+  height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.calendar .__footer .__month-title {
+  -ms-flex-preferred-size: 35%;
+      flex-basis: 35%;
+  height: 100%;
+  border-right: 0.5px solid #707070;
+  border-left: 0.5px solid #707070;
+  color: #5B9CFF;
+  font-size: 2.25em;
+}
+
+.calendar .__footer .__month-title b {
+  margin-left: 0.5rem;
+}
+
+.calendar .__footer .__btn {
+  -ms-flex-preferred-size: 32.5%;
+      flex-basis: 32.5%;
+  height: 100%;
+  color: #5B9CFF;
+  font-size: 2.5em;
+}
+
+.calendar .__footer .__prevbutton {
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
 }
 
 body {
