--- a/style/mainWindow/main.scss
+++ b/style/mainWindow/main.scss
@@ -8,6 +8,7 @@
 @import "components/_task-card.scss";
 @import "components/_schedule.scss";
 @import "components/_task-page.scss";
+@import "components/_calendar.scss";
 
 @import "_layout.scss";
 
