--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -389,8 +389,10 @@
   padding-bottom: 3px;
   color: white;
   cursor: pointer;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: font-size 0.3s, -webkit-box-shadow 0.3s;
+  transition: font-size 0.3s, -webkit-box-shadow 0.3s;
+  transition: font-size 0.3s, box-shadow 0.3s;
+  transition: font-size 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
   -webkit-box-shadow: inset 1px 1px 1px 1px rgba(113, 122, 255, 0.4);
           box-shadow: inset 1px 1px 1px 1px rgba(113, 122, 255, 0.4);
 }
@@ -410,6 +412,84 @@
   -webkit-box-shadow: inset -1px -1px 1px 1px rgba(113, 122, 255, 0.4);
           box-shadow: inset -1px -1px 1px 1px rgba(113, 122, 255, 0.4);
   background: linear-gradient(145deg, rgba(164, 170, 249, 0.5), rgba(113, 122, 255, 0.5));
+}
+
+.navigation-bar .__settings-btn {
+  left: 0.2rem;
+  bottom: 0.2rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  z-index: 100;
+  -webkit-transform: none;
+          transform: none;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.navigation-bar .__settings-btn img {
+  left: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.navigation-bar .__settings {
+  position: absolute;
+  z-index: 50;
+  background: linear-gradient(10deg, #A5C3F7, #B5C9FF);
+  left: -150%;
+  width: calc(100% - 1rem);
+  height: calc(100% - 1rem);
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: left 1s;
+  transition: left 1s;
+}
+
+.navigation-bar .__settings .__title {
+  color: white;
+  margin-top: 0;
+  font-size: 1.35em;
+  text-decoration: underline;
+}
+
+.navigation-bar .__settings .__disclaimer {
+  font-size: 1.15em;
+  color: #303030;
+  padding: 0.5rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.navigation-bar .__settings .__input {
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.navigation-bar .__settings .__bug-report {
+  position: relative;
+  margin-top: 0.5rem;
+}
+
+.navigation-bar .__settings .__bug-report span {
+  font-size: 1.25em;
+}
+
+.navigation-bar .__settings .__bug-report img {
+  position: absolute;
+  left: 1.5rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 .tasks-box {
